--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,16 +10,16 @@
 	  <div class="nav-collapse">
 		<ul class="nav">		  
 		  <li class="">
-			<a href="http://erjjones.github.com"><i class="icon-home"></i> Home</a>
+			<a href="http://vivekaxl.github.com"><i class="icon-home"></i> Home</a>
 		  </li>
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-comment"></i> Social <b class="caret"></b></a>
 				<ul class="dropdown-menu">										
-					<li class=""><a href="http://www.twitter.com/erjjones" rel="tooltip" title="Go to twitter.com/erjjones" target="_blank">Twitter</a></li>
-					<li class=""><a href="http://github.com/erjjones" rel="tooltip" title="Go to github.com/erjjones" target="_blank">GitHub</a></li>
-					<li class=""><a href="http://www.delicious.com/erjjones" rel="tooltip" title="Go to delicious.com/erjjones" target="_blank">Delicious</a></li>
+					<li class=""><a href="http://www.twitter.com/vivekaxl" rel="tooltip" title="Go to twitter.com/vivekaxl" target="_blank">Twitter</a></li>
+					<li class=""><a href="http://github.com/vivekaxl" rel="tooltip" title="Go to github.com/vivekaxl" target="_blank">GitHub</a></li>
+					<li class=""><a href="http://www.delicious.com/vivekaxl" rel="tooltip" title="Go to delicious.com/vivekaxl" target="_blank">Delicious</a></li>
 					<li class=""><a href="http://www.linkedin.com/pub/eric-jones/a/848/1b3" rel="tooltip" title="Go to LinkedIn profile" target="_blank">LinkedIn</a></li>										
-					<li class=""><a href="http://coderwall.com/erjjones" rel="tooltip" title="Go to coderwall/erjjones" target="_blank">Coderwall</a></li>
+					<li class=""><a href="http://coderwall.com/vivekaxl" rel="tooltip" title="Go to coderwall/vivekaxl" target="_blank">Coderwall</a></li>
 					<li class="divider"></li>
 					<li class=""><a href="http://feeds.feedburner.com/github/xmyo" rel="tooltip" title="Go to feedburner" target="_blank">RSS</a></li>
 				</ul>
@@ -27,8 +27,8 @@
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list"></i> Projects <b class="caret"></b></a>
 				<ul class="dropdown-menu">					
-					<li class=""><a href="https://github.com/erjjones/earthjs" rel="tooltip" title="Go to Earth.js on GitHub" target="_blank">Earth.js</a></li>					
-					<li class=""><a href="http://erjjones.github.com/forsale.html" rel="tooltip" title="Go to my For Sale Items">Parting Out the Civic</a></li>
+					<li class=""><a href="https://github.com/vivekaxl/earthjs" rel="tooltip" title="Go to Earth.js on GitHub" target="_blank">Earth.js</a></li>					
+					<li class=""><a href="http://vivekaxl.github.com/forsale.html" rel="tooltip" title="Go to my For Sale Items">Parting Out the Civic</a></li>
 				</ul>
 			 </li>			
 		</ul>		
