--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,11 +17,10 @@
 				<ul class="dropdown-menu">										
 					<li class=""><a href="http://www.twitter.com/vivekaxl" rel="tooltip" title="Go to twitter.com/vivekaxl" target="_blank">Twitter</a></li>
 					<li class=""><a href="http://github.com/vivekaxl" rel="tooltip" title="Go to github.com/vivekaxl" target="_blank">GitHub</a></li>
-					<li class=""><a href="http://www.delicious.com/vivekaxl" rel="tooltip" title="Go to delicious.com/vivekaxl" target="_blank">Delicious</a></li>
-					<li class=""><a href="http://www.linkedin.com/pub/eric-jones/a/848/1b3" rel="tooltip" title="Go to LinkedIn profile" target="_blank">LinkedIn</a></li>										
-					<li class=""><a href="http://coderwall.com/vivekaxl" rel="tooltip" title="Go to coderwall/vivekaxl" target="_blank">Coderwall</a></li>
-					<li class="divider"></li>
-					<li class=""><a href="http://feeds.feedburner.com/github/xmyo" rel="tooltip" title="Go to feedburner" target="_blank">RSS</a></li>
+					<li class=""><a href="https://www.linkedin.com/pub/vivek-nair/24/7a/5b5" rel="tooltip" title="Go to LinkedIn profile" target="_blank">LinkedIn</a></li>	
+					github.com/vivekaxl" target="_blank">GitHub</a></li>
+					<li class=""><a href="https://www.facebook.com/vivekaxl" rel="tooltip" title="Go to Facebook profile" target="_blank">Facebook</a></li>	
+
 				</ul>
 			 </li>
 		<li class="dropdown">
@@ -35,4 +34,4 @@
 	  </div>
 	</div>
   </div>
-</div>
+</div>https://www.linkedin.com/pub/vivek-nair/24/7a/5b5
