--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,5 +1,5 @@
 <h2>Hello. I'm Vivek Nair</h2>
-<p><img src="https://raw.githubusercontent.com/vivekaxl/vivekaxl.github.io/master/favicon.ico" alt="Vivek Nair" title="Follow me on Twitter @vivekaxl"  class="img-rounded floatLeft" />			
+<p><img src="https://raw.githubusercontent.com/vivekaxl/vivekaxl.github.io/master/favicon.ico" height="80px" width="80px" alt="Vivek Nair" title="Follow me on Twitter @vivekaxl"  class="img-rounded floatLeft" />			
 I am a third year Ph.D student working with Dr. Tim Mnezies.</p>					
 <p><iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vivekaxl&repo=vivekaxl.github.io&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>&nbsp;<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vivekaxl&repo=vivekaxl.github.com&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe></p>
 <p><a href="https://twitter.com/vivekaxl" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @vivekaxl</a></p>
