--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -9,6 +9,6 @@ I am a third year Ph.D student working with Dr. Tim Mnezies.</p>
 	  <li><a href="http://www.linkedin.com/pub/eric-jones/a/848/1b3" rel="me" class="social linkedin" title="Go to LinkedIn profile" target="_blank"></a></li>
 	  <li><a href="http://www.twitter.com/vivekaxl" rel="me" class="social twitter" title="Go to twitter.com/vivekaxl" target="_blank"></a></li>
 	  <li><a href="https://plus.google.com/+VivekNair-vivekaxl/about" rel="me" class="social gplus" title="Go to Google Plus profile" target="_blank"></a></li> 
-	  <li><a href="https://github.com/vivekaxl/Feedback/issues/new" rel="me" class="social mail" title="Leave feedback for Eric"  target="_blank"></a></li>				
+	  <li><a href="https://github.com/vivekaxl/Feedback/issues/new" rel="me" class="social mail" title="Leave feedback for Vivek"  target="_blank"></a></li>				
 	</ul>
 </p>
