--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,8 +25,8 @@
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list"></i> Projects <b class="caret"></b></a>
 				<ul class="dropdown-menu">					
-					<li class=""><a href="https://github.com/vivekaxl/earthjs" rel="tooltip" title="Go to Earth.js on GitHub" target="_blank">Earth.js</a></li>					
-					<li class=""><a href="http://vivekaxl.github.com/forsale.html" rel="tooltip" title="Go to my For Sale Items">Parting Out the Civic</a></li>
+					<li class=""><a href="https://drive.google.com/file/d/0B1MLlqbf5WswS1BNaU1xV0JtMWc/view?usp=sharing" rel="Resume" title="Resume" target="_blank">Resume</a></li>					
+					
 				</ul>
 			 </li>			
 		</ul>		
