--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
 	  <div class="nav-collapse">
 		<ul class="nav">		  
 		  <li class="">
-			<a href="http://vivekaxl.github.com"><i class="icon-home"></i> Home</a>
+			<a href="http://vivekaxl.github.io"><i class="icon-home"></i> Home</a>
 		  </li>
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-comment"></i> Social <b class="caret"></b></a>
@@ -22,13 +22,9 @@
 
 				</ul>
 			 </li>
-		<li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list"></i> Projects <b class="caret"></b></a>
-				<ul class="dropdown-menu">					
-					<li class=""><a href="https://drive.google.com/file/d/0B1MLlqbf5WswS1BNaU1xV0JtMWc/view?usp=sharing" rel="Resume" title="Resume" target="_blank">Resume</a></li>					
-					
-				</ul>
-			 </li>			
+			<li class="">
+				<a href="https://drive.google.com/file/d/0B1MLlqbf5WswS1BNaU1xV0JtMWc/view?usp=sharing"><i class="icon-home"></i> Resume</a>
+		  	</li>
 		</ul>		
 	  </div>
 	</div>
