--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,7 +19,7 @@
 					<li class=""><a href="http://github.com/vivekaxl" rel="tooltip" title="Go to github.com/vivekaxl" target="_blank">GitHub</a></li>
 					<li class=""><a href="https://www.linkedin.com/pub/vivek-nair/24/7a/5b5" rel="tooltip" title="Go to LinkedIn profile" target="_blank">LinkedIn</a></li>	
 					<li class=""><a href="https://www.facebook.com/vivekaxl" rel="tooltip" title="Go to Facebook profile" target="_blank">Facebook</a></li>	
-
+					<li class=""><a href="https://www.quora.com/Vivek-Nair-18" rel="tooltip" title="Go to Quora profile" target="_blank">Quora</a></li>	
 				</ul>
 			 </li>
 			<li class="">
