--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -30,11 +30,11 @@
 	<div class="marketing">
 		<div class="content">	  
 			<div class="row">			   				
-				<div class="span7 columns">					
+				<div class="span4 columns">					
 					 {% include aboutme.html %}							
 				</div>			   				
 				<div class="span4 columns">						
-					{{ content }} 					
+					{% include description.html %} 					
 				</div>				
 			</div>						
 		</div>			
