--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,7 +23,7 @@
 				</ul>
 			 </li>
 			<li class="">
-				<a href="https://drive.google.com/file/d/0B1MLlqbf5WswVUJQemhBeVRQdFVDLVNkd3FYNkdFS2FfRG93/view?usp=sharing"><i class="icon-align-justify"></i> Resume</a>
+				<a href="https://drive.google.com/file/d/0B1MLlqbf5WswVUJQemhBeVRQdFVDLVNkd3FYNkdFS2FfRG93/view?usp=sharing" target="_blank"><i class="icon-align-justify"></i> Resume</a>
 		  	</li>
 		</ul>		
 	  </div>
