--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color:#232323;
   margin:36px 0 10px;
+  font-size: 18px
 }
 
 p, ul, ol, table, dl {
@@ -67,10 +68,18 @@ h2 {
 }
 
 h3 {
-	font-size: 18px;
+	font-size: 24px;
 }
 
-h4, h5, h6 {
+h4 {
+	font-family: Arvo, Monaco, serif;
+	font-weight: 700;
+	font-size: 20px;
+}
+
+
+
+ h5, h6 {
 	font-family: Arvo, Monaco, serif;
 	font-weight: 700;
 }
@@ -309,7 +318,7 @@ a.buttons:hover {
 /* Section - for main page content */
 
 section {
-  width:850px;
+  width:650px;
   float:right;
   padding-bottom:50px;
 }
