--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ time, mark, audio, video {
 /* Base text styles */
 
 body {
-  padding:10px 50px 0 0;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	color: #232323;
@@ -45,6 +44,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p, ul, ol, table, dl {
   margin:0 0 22px;
+  font-size: 18px;
 }
 
 h1, h2, h3 {
@@ -69,11 +69,12 @@ h2 {
 
 h3 {
 	font-size: 24px;
+	font-weight: 700;
 }
 
 h4 {
 	font-family: Arvo, Monaco, serif;
-	font-weight: 700;
+	font-weight: 400;
 	font-size: 20px;
 }
 
