--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,8 @@ h3 {
 }
 
 h4 {
-	font-family: Arvo, Monaco, serif;
-	font-weight: 400;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
 	font-size: 20px;
 }
 
