--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#f5e3e3;
+  color:#FFFF00;
   margin:36px 0 10px;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
@@ -58,6 +58,7 @@ h1,h2, h3 {
 	display: block;
 	border-bottom: 1px solid #ccc;
 	padding-bottom: 5px;
+	color: #FF8000;
 }
 
 h1 {
@@ -87,7 +88,7 @@ h4 {
 }
 
 a {
-  color:#C30000;
+  color:#00FFFF;
   font-weight:500;
   text-decoration:none;
 }
@@ -246,7 +247,7 @@ h1.header {
 
 
 h1.header, a.header, a.name, header a{
-	color: #fff;
+	color: #FF8000;
 }
 
 a.header {
