--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#FFFF00;
+  color:#91e6f7;
   margin:36px 0 10px;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
@@ -58,7 +58,7 @@ h1,h2, h3 {
 	display: block;
 	border-bottom: 1px solid #ccc;
 	padding-bottom: 5px;
-	color: #FF8000;
+	color: #66d9efd6;
 }
 
 h1 {
@@ -88,7 +88,7 @@ h4 {
 }
 
 a {
-  color:#00FFFF;
+  color:#FD971F;
   font-weight:500;
   text-decoration:none;
   font-size: 18px;
