--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 p, ul, ol, table, dl {
   margin:0 0 22px;
   font-size: 18px;
+  font-family: Montserrat;
 }
 
 h1, h2, h3 {
