--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ h1,h2, h3 {
 	display: block;
 	border-bottom: 1px solid #ccc;
 	padding-bottom: 5px;
-	color: #F92672;
+	color: #FFE792;
 }
 
 h1 {
